# paRAleGal

./: LICENSE  Makefile  README.md  pyproject.toml
docs/: mkdocs.yml
docs/docs/: index.md
openlaw_legal_assistant/: __init__.py  dataset.py  features.py  plots.py
openlaw_legal_assistant/modeling/: predict.py  train.py
