[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "openlaw_legal_assistant"
version = "0.0.1"
description = "An attempt at developing LLM-powered (RAFT-based) AI legal assistant for African Law"
authors = [
  { name = "Ramsey Ith Njema" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
requires-python = "~=3.10"

[tool.black]
line-length = 99
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
)/
'''

[tool.ruff.lint.isort]
known_first_party = ["openlaw_legal_assistant"]
force_sort_within_sections = true
